--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title></title>
 	<script type="text/javascript" src="https://trello.com/power-ups/power-up.min.js"></script>
+	<script type="text/javascript" src="https://trello.com/1/client.js?key=e3227833b55cbe24bfedd05e5ec870dd"></script>
 	<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
