precondition of client.js: jquery

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
 	<title></title>
 	<script type="text/javascript" src="https://trello.com/power-ups/power-up.min.js"></script>
+	<script
+			  src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+			  integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
+			  crossorigin="anonymous"></script>
 	<script type="text/javascript" src="https://trello.com/1/client.js?key=e3227833b55cbe24bfedd05e5ec870dd"></script>
 	<script type="text/javascript" src="script.js"></script>
 </head>
